--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -24,7 +24,11 @@
 
 @layer base {
   html {
-    font-family: 'Inter', system-ui, -apple-system, sans-serif;
+    font-family:
+      'Inter',
+      system-ui,
+      -apple-system,
+      sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
   }
@@ -79,4 +83,3 @@
     @apply py-4;
   }
 }
-
